2017-10-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Get server result
	* client-src/sendbackup.c: Use full_write, check its result
	* server-src/dumper.c: return 1 since errstr is never set

2017-10-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	Send server result to client application and POST scripts
	* amandad-src/amandad.c (process_readnetfd): Fix for close before
	  event to read data is started
	* application-src/amgtar.c: Save the state file only if servr report
	  success
	* application-src/amlog-script.pl, application-src/amrandom.pl,
	  application-src/amraw.pl, application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Accept server result
	* client-src/client_util.c: Add a backup_result_t argument to
	  run_client_script* functions
	* client-src/client_util.h (backup_result_t): New enum for server
	  result, Add a backup_result_t argument to run_client_script* functions
	* client-src/selfcheck.c: Fix for run_client_scripts API changes
	* client-src/sendbackup.c
	* client-src/sendsize.c: Fix for run_client_scripts API changes
	* common-src/amanda.h: DATA_FD_COUNT is 5
	* common-src/amfeatures.c: Add fe_sendbackup_stream_cmd and
	  fe_sendbackup_stream_cmd_get_dumper_result
	* common-src/amfeatures.h: Add fe_sendbackup_stream_cmd and
	  fe_sendbackup_stream_cmd_get_dumper_result
	* common-src/backup_support_option.c: Parse CMD-STREAM and
	  WANT-SERVER-BACKUP-RESULT
	* common-src/backup_support_option.h (backup_support_option_t): Add
	  cmd_stream and want_server_backup_result
	* common-src/file.c (safe_fd4,safe_fd5): New functions
	* common-src/file.h (safe_fd4,safe_fd5): Add prototypes
	* installcheck/Amanda_ClientService.pl: Check DATA_FD_COUNT is 5
	* installcheck/Installcheck/Rest.pm (post): Fix for no postfields
	* installcheck/Makefile.am (full_tests): add failure-application-stderr
	* installcheck/failure-application-stderr.pl: New test to check the